[project]
name = "codeu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yuntao Xie", email = "yuntao.xie@bytedance.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx[socks]>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-mcp-adapters>=0.1.11",
    "langchain[openai]>=1.0.2",
    "langgraph>=1.0.1",
    "langgraph-cli[inmem]>=0.4.4",
    "pexpect>=4.9.0",
    "pydantic>=2.12.3",
    "rich>=14.2.0",
    "textual>=6.4.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
